[gd_scene load_steps=8 format=3 uid="uid://j87n4lychbt5"]

[ext_resource type="Script" uid="uid://bdu71hmht8qs2" path="res://main_menu/version_label.gd" id="1_5huni"]
[ext_resource type="Texture2D" uid="uid://gxq4fd52elju" path="res://gameplay/crowd_control/Assets/main_menu.png" id="1_6tl50"]
[ext_resource type="Script" uid="uid://dg2kc4v1sx32s" path="res://main_menu/menu_options.gd" id="2_gpv3d"]
[ext_resource type="Script" uid="uid://dergrftkcmq7n" path="res://main_menu/bg_menu.gd" id="2_t6bnd"]
[ext_resource type="PackedScene" uid="uid://dpicmplffpula" path="res://settings/settings.tscn" id="3_2osu0"]
[ext_resource type="PackedScene" uid="uid://cee5dna3u27jf" path="res://assets/select_sfx.tscn" id="4_82nwe"]
[ext_resource type="PackedScene" uid="uid://d3ophi6ns7co0" path="res://gameplay/crowd_control/crowd_control.tscn" id="6_t6bnd"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG2" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 2376.0
offset_bottom = 1593.0
scale = Vector2(0.43185234, 0.3786799)
texture = ExtResource("1_6tl50")
script = ExtResource("2_t6bnd")

[node name="Version" type="Label" parent="."]
layout_mode = 0
offset_left = 1060.0
offset_top = 20.0
offset_right = 1258.0
offset_bottom = 46.0
text = "Version: [set dynamically]"
horizontal_alignment = 2
script = ExtResource("1_5huni")

[node name="DebugUIStatus" type="Label" parent="." groups=["debug_ui"]]
visible = false
layout_mode = 0
offset_left = 24.0
offset_top = 23.0
offset_right = 162.0
offset_bottom = 49.0
text = "Debug UI enabled"

[node name="MenuOptions" type="VFlowContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5048828
anchor_top = 0.06666662
anchor_right = 0.51464844
anchor_bottom = 1.0666667
offset_left = -167.0
offset_top = 333.0
offset_right = 123.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.0767304, 0.66984683)
alignment = 1
script = ExtResource("2_gpv3d")
settings_scene = ExtResource("3_2osu0")
game = ExtResource("6_t6bnd")
metadata/_edit_use_anchors_ = true

[node name="Start" type="Button" parent="MenuOptions"]
custom_minimum_size = Vector2(275, 50)
layout_mode = 2
text = "               "

[node name="Settings" type="Button" parent="MenuOptions"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="MenuOptions"]
layout_mode = 2
text = "Quit"

[node name="SelectSfx" parent="MenuOptions" instance=ExtResource("4_82nwe")]

[connection signal="pressed" from="MenuOptions/Start" to="MenuOptions" method="_on_start_pressed"]
[connection signal="pressed" from="MenuOptions/Settings" to="MenuOptions" method="_on_settings_pressed"]
[connection signal="pressed" from="MenuOptions/Quit" to="MenuOptions" method="_on_quit_pressed"]
